@@ -1,5 +1,11 @@
 2006-07-30  Fabio Marzocca  <thesaltydog@gmail.com>
 
+	* src/baobab.c: (main):
+	Trapping div by zero error when no mountpoints
+	are detected.
+
+2006-07-30  Fabio Marzocca  <thesaltydog@gmail.com>
+
 	* data/baobab.desktop.in.in:
 	* data/baobab.glade:
 	Using standard American English in app name
